@@ -1,6 +1,9 @@
 0.2.5   xx-xxx-2009
   o Add ports 7000 and 7001 to the list of ports excluded by the IRC
     category in the exit policy configuration tab. (Ticket #517)
+  o Add a context menu for highlighted event items in the "Basic" message
+    log view that allows the user to copy the selected item text to the
+    clipboard.
 
 
 0.2.4   07-Sep-2009
